--- a/Discussion/Discussion.csproj
+++ b/Discussion/Discussion.csproj
@@ -12,8 +12,14 @@
     <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="CassandraCSharpDriver" Version="3.22.0" />
+    <PackageReference Include="Confluent.Kafka" Version="2.8.0" />
+    <PackageReference Include="MASES.KNet" Version="2.9.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\RestKafkaApi\RestKafkaApi.csproj" />
   </ItemGroup>
 
 </Project>
